# terra-swarm

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
.github/workflows/: release.yml
.impeccable/: design.json
src/: App.css  App.tsx  api.ts  layout.ts  motion.ts  terminalRegistry.ts  types.ts  updater.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  pty.rs  voice.rs  workspace.rs
src-tauri/src/voice/: audio.rs  models.rs  transcriber.rs
src/components/: ResumeDialog.tsx  Sidebar.tsx  StatusBar.tsx  TerminalGrid.tsx  TerminalPane.tsx  TopBar.tsx
video/: package-lock.json  package.json  tsconfig.json
video/src/: Root.tsx  TerraSwarm.tsx  theme.ts
video/src/components/: FadeIn.tsx  Logo.tsx  SwarmMark.tsx
video/src/scenes/: AppDemo.tsx  Features.tsx  Title.tsx
